# mont

./: '  Cargo.toml  LICENSE  Makefile  README.md  package.json
.claude/: CLAUDE.md  settings.local.json
.claude/skills/: new-task.md
.claude/skills/completing-a-task/: SKILL.md
.github/workflows/: ci.yml  release.yml
.tasks/: actionable-errors.md  add-complete-field.md  add-jj-lib.md  add-license.md  allow-empty-id-in-parse.md  ample-foxhound.md  arch-commands-module.md  arch-consolidate-graph-ops.md  arch-context-load.md  arch-context-mutations.md  arch-context-save.md  arch-context.md  arch-dirty-tracking.md  arch-graph-errors.md  arch-graph-struct.md  arch-migrate-cli.md  arch-status-enum.md  arch-task-struct.md  arch-task-type.md  arch-update-rendering.md  architecture-validator.md  available-ape.md  awake-satyr.md  boisterous-mudfish.md  bug-list-error.md  bug-tasks.md  celestial-orangutan.md  change-mont-claude.md  classical-hog.md  claude-not-showing.md  cleansing-caracara.md  cli-commands.md  conducive-takin.md  config.yml  convenient-chipmunk.md  create-task-bug.md  daring-hound.md  dazzled-bobolink.md  debonair-kea.md  disable-jj.md  (+117 more)
extensions/: index.ts
src/: context.rs  display.rs  display_old.rs  error_fmt.rs  graph.rs  jj.rs  lib.rs  main.rs  multieditor.rs  render.rs  task.rs  validations.rs
src/commands/: check.rs  delete.rs  distill.rs  done.rs  edit.rs  init.rs  jot.rs  list.rs  llm.rs  mod.rs  new.rs  ready.rs  shared.rs  show.rs  start.rs  status.rs  stop.rs  task_cmd.rs  unlock.rs
src/context/: graph.rs  mod.rs  settings.rs  task.rs  transaction.rs  validations.rs  view.rs
src/display/: layout.rs  mod.rs  render.rs  routing.rs
src/prompts/: 00_no-task-in-progress.md  01_no-code-changes.md  02_has-code-changes.md  03_some-gates-unlocked.md  04_all-gates-unlocked.md  05_jot-in-progress.md
