[package]
name = "mont"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
petname = "2"
sapling-renderdag = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
termimad = "0.34.1"
thiserror = "1"
unidiff = "0.4"

[dev-dependencies]
regex = "1"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
# Sensible restrictions
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
