[package]
name = "mont"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A task tracker to help you and your agent write robust, reliable code"
repository = "https://github.com/Sawyer-Powell/mont"

[dependencies]
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
petname = "2"
ulid = "1"
sapling-renderdag = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
termimad = "0.34.1"
thiserror = "1"
unidiff = "0.4"
minijinja = "2"

[dev-dependencies]
regex = "1"
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/mont-{ target }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/mont-aarch64-apple-darwin.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/mont-x86_64-apple-darwin.tar.gz"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
# Sensible restrictions
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
